--- a/webtools/litmus/templates/en/default/form_widgets/select_testcase_id.tmpl
+++ b/webtools/litmus/templates/en/default/form_widgets/select_testcase_id.tmpl
@@ -1,4 +1,9 @@
-<select class="testcase" id="[% name %]" name="[% name %]"[% IF size %] size="[% size %]"[% END %][% IF onchange %] onChange="[% onchange %]"[% END %][% IF disabled %] disabled[% END %]>
+<select 
+  class="[% IF classname %][% classname %][% ELSE %]select_testcase[% END %]"
+  id="[% name %]" name="[% name %]"
+  [% IF size %] size="[% size %]"[% END %]
+  [% IF onchange %] onchange="[% onchange %]"[% END %]
+  [% IF disabled %] disabled[% END %]>
     [% IF placeholder %]<option value="">-Testcase ID#[% IF show_summary %]: Summary[% END %]-</option>[% END %]
 [% IF testcases %]
 [% FOREACH testcase=testcases %]
