--- a/webtools/litmus/templates/en/default/reporting/testday_search.tmpl
+++ b/webtools/litmus/templates/en/default/reporting/testday_search.tmpl
@@ -168,11 +168,11 @@ function changeBranch(branchSelectBox)
               </tr>
               <tr>
                 <td>Product:</td>
-                <td>[% INCLUDE form_widgets/select_product_id.tmpl name="product_id" placeholder=1 onChange="changeProduct(this);" %]</td>
+                <td>[% INCLUDE form_widgets/select_product_id.tmpl name="product_id" placeholder=1 onchange="changeProduct(this);" %]</td>
               </tr>
               <tr>
                 <td>Branch:</td>
-                <td>[% INCLUDE form_widgets/select_branch_id.tmpl name="branch_id" placeholder=1 onChange="changeBranch(this);" %]</td>
+                <td>[% INCLUDE form_widgets/select_branch_id.tmpl name="branch_id" placeholder=1 onchange="changeBranch(this);" %]</td>
  		<td>&lArr; Select Product first</td>
               </tr>
               <tr>
