--- a/webtools/litmus/templates/en/default/show/search_for_testcases.tmpl
+++ b/webtools/litmus/templates/en/default/show/search_for_testcases.tmpl
@@ -102,10 +102,10 @@ var relevanceHelpText = '<p>Relevance values are non-negative floating-point num
 		</tr>
 		<tr>
 		  <td>
-                    [% INCLUDE form_widgets/select_product_id.tmpl name="product_id" placeholder=1 onChange="changeProduct(this);" %]
+                    [% INCLUDE form_widgets/select_product_id.tmpl name="product_id" placeholder=1 onchange="changeProduct(this);" %]
                   </td>
 	          <td>
-                    [% INCLUDE form_widgets/select_testgroup_id.tmpl name="testgroup_id" placeholder=1 onChange="changeTestgroup(this);" %]
+                    [% INCLUDE form_widgets/select_testgroup_id.tmpl name="testgroup_id" placeholder=1 onchange="changeTestgroup(this);" %]
                   </td>
                   <td>
                     [% INCLUDE form_widgets/select_subgroup_id.tmpl name="subgroup_id" placeholder=1 %]
