--- a/webtools/litmus/templates/en/default/admin/form_widgets/update_opsyses.tmpl
+++ b/webtools/litmus/templates/en/default/admin/form_widgets/update_opsyses.tmpl
@@ -10,14 +10,14 @@
       <table border="0" cellspacing="0" cellpadding="5">
         <tr>
         <td>
-        [% INCLUDE form_widgets/select_opsys_id.tmpl name="opsys_id" placeholder=1 size=5 show_name=1 onChange="loadOpsys();" %]
+        [% INCLUDE form_widgets/select_opsys_id.tmpl name="opsys_id" placeholder=1 size=5 show_name=1 onchange="loadOpsys();" %]
         </td>
         </tr>
         <tr>
         <td>
-        <input id="add_opsys_button" name="add_opsys_button" class="manage" type="button" onClick="switchOpsysFormToAdd();" value="Add new operating system">&nbsp;
-        <input id="edit_opsys_button" name="edit_opsys_button" class="manage" type="button" onClick="switchOpsysFormToEdit();" value="Edit operating system" disabled>&nbsp;
-        <input id="delete_opsys_button" name="delete_opsys_button" class="manage" type="submit" onClick="return confirm('Really delete this operating system?');" value="Delete operating system" disabled>&nbsp;
+        <input id="add_opsys_button" name="add_opsys_button" class="manage" type="button" onclick="switchOpsysFormToAdd();" value="Add new operating system">&nbsp;
+        <input id="edit_opsys_button" name="edit_opsys_button" class="manage" type="button" onclick="switchOpsysFormToEdit();" value="Edit operating system" disabled>&nbsp;
+        <input id="delete_opsys_button" name="delete_opsys_button" class="manage" type="submit" onclick="return confirm('Really delete this operating system?');" value="Delete operating system" disabled>&nbsp;
         </td>
         </tr>
       </table>
@@ -57,7 +57,7 @@
                                  size="55"/ disabled></td>
           </tr>
 	  <tr>
-          <td colspan="3" align="right"><input id="edit_opsys_form_reset" class="button" type="button" value="Reset" disabled onClick="resetOpsys();" />&nbsp;<input class="button" type="submit" id="edit_opsys_form_submit" name="edit_opsys_form_submit" value="Submit Edits" disabled /></div>
+          <td colspan="3" align="right"><input id="edit_opsys_form_reset" class="button" type="button" value="Reset" disabled onclick="resetOpsys();" />&nbsp;<input class="button" type="submit" id="edit_opsys_form_submit" name="edit_opsys_form_submit" value="Submit Edits" disabled /></div>
           </td>
           </tr>
         </table>
