--- a/webtools/litmus/templates/en/default/admin/manage_subgroups.tmpl
+++ b/webtools/litmus/templates/en/default/admin/manage_subgroups.tmpl
@@ -25,9 +25,6 @@
   # ***** END LICENSE BLOCK *****
 #%]
 
-[% PROCESS global/selects.none.tmpl %]
-
-[% includeselects=1 %]  
 [% INCLUDE global/html_header.tmpl js_files=['js/FormValidation.js','js/MochiKit/MochiKit.js','js/json.js','js/Help.js','js/SelectBoxes.js','js/SelectSort.js','js/ManageSubgroups.js'] %]
 [% INCLUDE global/litmus_header.tmpl %]
 
@@ -59,10 +56,10 @@ var current_user_id=[% user.user_id %];
 	    </tr>
 	    <tr>
 	      <td>
-	        [% INCLUDE productbox onchange="changeProduct('filter'); filterList();" nameextra="_filter" %]
+                [% INCLUDE form_widgets/select_product_id.tmpl name="product_filter" placeholder=1 size=1 onchange="changeProduct('filter');filterList();" %]
 	      </td>
 	      <td>
-	        [% INCLUDE testgroupbox onchange="changeTestgroup('filter'); filterList();" nameextra="_filter" %]
+                [% INCLUDE form_widgets/select_testgroup_id.tmpl name="testgroup_filter" placeholder=1 size=1 onchange="changeTestgroup('filter');filterList();" %]
 	      </td>
 	    </tr>
 	  </table>
