--- a/webtools/litmus/templates/en/default/form_widgets/select_platform.tmpl
+++ b/webtools/litmus/templates/en/default/form_widgets/select_platform.tmpl
@@ -1,4 +1,4 @@
-<select id="[% name %]" name="[% name %]"[% IF size %] size="[% size %]"[% END %][% IF disabled %] disabled[% END %][% IF onChange %] onChange="[% onChange %]"[% END %]>
+<select id="[% name %]" name="[% name %]"[% IF size %] size="[% size %]"[% END %][% IF disabled %] disabled[% END %][% IF onchange %] onchange="[% onchange %]"[% END %]>
     [% IF placeholder %]<option value="">-Platform-</option>[% END %]
 [% IF platforms %]
 [% FOREACH platform=platforms %]
