--- a/webtools/litmus/templates/en/default/form_widgets/select_platform_id.tmpl
+++ b/webtools/litmus/templates/en/default/form_widgets/select_platform_id.tmpl
@@ -1,9 +1,9 @@
 <select
-  [% IF classname %] class="[% classname %]"[% END %] 
+  class="[% IF classname %][% classname %][% ELSE %]select_platform[% END %]" 
   id="[% name %]" name="[% name %]"
   [% IF size %] size="[% size %]"[% END %]
   [% IF disabled %] disabled[% END %]
-  [% IF onChange %] onChange="[% onChange %]"[% END %]>
+  [% IF onchange %] onchange="[% onchange %]"[% END %]>
 
   [% IF placeholder %]<option value="">-Platform-</option>[% END %]
   [% IF platforms %]
