--- a/webtools/litmus/templates/en/default/form_widgets/select_product_id.tmpl
+++ b/webtools/litmus/templates/en/default/form_widgets/select_product_id.tmpl
@@ -1,9 +1,15 @@
-<select id="[% name %]" name="[% name %]"[% IF size %] size="[% size %]"[% END %][% IF disabled %] disabled[% END %][% IF onChange %] onChange="[% onChange %]"[% END %][% IF multiple %] multiple[% END %]>
+<select
+  class="[% IF classname %][% classname %][% ELSE %]select_product[% END %]"
+  id="[% name %]" name="[% name %]"
+  [% IF size %] size="[% size %]"[% END %]
+  [% IF disabled %] disabled[% END %]
+  [% IF onchange %] onchange="[% onchange %]"[% END %]
+  [% IF multiple %] multiple[% END %]>
     [% IF placeholder %]<option value="">-Product-</option>[% END %]
 [% IF products %]
 [% FOREACH product=products %]
     <option[% IF defaults.product==product.name %] selected[% END %] 
-        value="[% product.product_id | html %]">[% product.name | html %] ([% product.product_id %])</option>
+        value="[% product.product_id | html %]">[% product.name | html %][% IF display_id %] ([% product.product_id %])[% END %]</option>
 [% END %]
 [% END %]
 </select>
