--- a/webtools/testopia/template/en/default/testopia/plan/show.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/plan/show.html.tmpl
@@ -257,6 +257,7 @@
 <a href="tr_plan_reports.cgi?plan_id=[% plan.id FILTER none %]&type=build_coverage">Build Coverage</a><br/>
 <a href="tr_query.cgi?current_tab=plan&report=1">General Reports</a><br/>
 [% IF plan.bugs %]
+<a href="tr_plan_reports.cgi?plan_id=[% plan.id FILTER none %]&type=bugcounts">Top Bugs</a><br>
 <a href="buglist.cgi?bug_id=[% plan.bug_list FILTER none %]">Bugs Found in this Plan</a><br>
 [% END %]
 [%##### Edit Plan #####%]
